[package]
description = "A task executor for Bevy Engine"
edition = "2021"
homepage = "https://bevyengine.org"
keywords = ["bevy"]
license = "MIT OR Apache-2.0"
name = "bevy_tasks"
repository = "https://github.com/bevyengine/bevy"
version = "0.12.0-dev"

[features]
multi-threaded = []

[dependencies]
async-channel = "1.4.2"
async-executor = "1.3.0"
async-io = {version = "1.13.0", optional = true}
async-task = "4.2.0"
concurrent-queue = "2.0.0"
futures-lite = "1.4.0"
smolscale = {git = "https://github.com/hymm/smolscale", branch = "lifetimed-executor"}

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

[dev-dependencies]
instant = {version = "0.1", features = ["wasm-bindgen"]}
